@@ -34,9 +34,12 @@ import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 import java.util.stream.IntStream;
+import org.apache.calcite.plan.RelOptUtil;
 import org.apache.calcite.rel.RelCollations;
 import org.apache.calcite.rel.core.AggregateCall;
 import org.apache.calcite.rel.type.RelDataType;
+import org.apache.calcite.rel.type.RelDataTypeFactory;
+import org.apache.calcite.sql.SqlAggFunction;
 import org.apache.calcite.sql.fun.SqlStdOperatorTable;
 import org.apache.calcite.sql.type.SqlTypeName;
 import org.apache.calcite.util.ImmutableBitSet;
@@ -46,6 +49,7 @@ import org.apache.ignite.internal.sql.engine.exec.RowHandler;
 import org.apache.ignite.internal.sql.engine.exec.exp.agg.AccumulatorWrapper;
 import org.apache.ignite.internal.sql.engine.exec.exp.agg.Accumulators;
 import org.apache.ignite.internal.sql.engine.exec.exp.agg.AggregateType;
+import org.apache.ignite.internal.sql.engine.exec.row.RowSchema;
 import org.apache.ignite.internal.sql.engine.framework.ArrayRowHandler;
 import org.apache.ignite.internal.sql.engine.type.IgniteTypeFactory;
 import org.apache.ignite.internal.sql.engine.util.Commons;
@@ -74,22 +78,13 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 row(0, 1000)
         ));
 
-        AggregateCall call = AggregateCall.create(
+        AggregateCall call = createAggregateCall(
                 SqlStdOperatorTable.COUNT,
-                false,
-                false,
-                false,
                 ImmutableList.of(),
-                ImmutableIntList.of(),
-                -1,
-                null,
-                RelCollations.EMPTY,
-                tf.createJavaType(int.class),
-                null);
+                tf.createSqlType(SqlTypeName.INTEGER)
+        );
 
         List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
-
-        RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
                 testAgg,
@@ -97,8 +92,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 grpSets,
                 call,
                 rowType,
-                aggRowType,
-                rowFactory(),
                 scan
         );
 
@@ -127,22 +120,13 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 row(2)
         ));
 
-        AggregateCall call = AggregateCall.create(
+        AggregateCall call = createAggregateCall(
                 SqlStdOperatorTable.COUNT,
-                true,
-                false,
-                false,
                 ImmutableList.of(),
-                ImmutableIntList.of(),
-                -1,
-                null,
-                RelCollations.EMPTY,
-                tf.createJavaType(int.class),
-                null);
+                tf.createSqlType(SqlTypeName.INTEGER)
+        ).withDistinct(true);
 
         List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of());
-
-        RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
                 testAgg,
@@ -150,8 +134,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 grpSets,
                 call,
                 rowType,
-                aggRowType,
-                rowFactory(),
                 scan,
                 false
         );
@@ -179,22 +161,13 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 row(0, 1000)
         ));
 
-        AggregateCall call = AggregateCall.create(
+        AggregateCall call = createAggregateCall(
                 SqlStdOperatorTable.MIN,
-                false,
-                false,
-                false,
-                List.of(),
                 ImmutableIntList.of(1),
-                -1,
-                 null,
-                RelCollations.EMPTY,
-                tf.createJavaType(int.class),
-                null);
+                tf.createSqlType(SqlTypeName.INTEGER)
+        );
 
         List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
-
-        RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
                 testAgg,
@@ -202,8 +175,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 grpSets,
                 call,
                 rowType,
-                aggRowType,
-                rowFactory(),
                 scan
         );
 
@@ -231,22 +202,13 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 row(0, 1000)
         ));
 
-        AggregateCall call = AggregateCall.create(
+        AggregateCall call = createAggregateCall(
                 SqlStdOperatorTable.MAX,
-                false,
-                false,
-                false,
-                List.of(),
                 ImmutableIntList.of(1),
-                -1,
-                null,
-                RelCollations.EMPTY,
-                tf.createJavaType(int.class),
-                null);
+                tf.createSqlType(SqlTypeName.INTEGER)
+        );
 
         List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
-
-        RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
                 testAgg,
@@ -254,8 +216,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 grpSets,
                 call,
                 rowType,
-                aggRowType,
-                rowFactory(),
                 scan
         );
 
@@ -286,22 +246,13 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 row(0, 1000)
         ));
 
-        AggregateCall call = AggregateCall.create(
+        AggregateCall call = createAggregateCall(
                 SqlStdOperatorTable.AVG,
-                false,
-                false,
-                false,
-                List.of(),
                 ImmutableIntList.of(1),
-                -1,
-                null,
-                RelCollations.EMPTY,
-                tf.createJavaType(int.class),
-                null);
+                tf.createSqlType(SqlTypeName.INTEGER)
+        );
 
         List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
-
-        RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
                 testAgg,
@@ -309,8 +260,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 grpSets,
                 call,
                 rowType,
-                aggRowType,
-                rowFactory(),
                 scan
         );
 
@@ -384,22 +333,13 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
         RelDataType rowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32, NativeTypes.INT32));
         ScanNode<Object[]> scan = new ScanNode<>(ctx, scanInput);
 
-        AggregateCall call = AggregateCall.create(
+        AggregateCall call = createAggregateCall(
                 SqlStdOperatorTable.SINGLE_VALUE,
-                false,
-                false,
-                false,
-                List.of(),
                 ImmutableIntList.of(1),
-                -1,
-                null,
-                RelCollations.EMPTY,
-                tf.createJavaType(Integer.class),
-                null);
+                tf.createSqlType(SqlTypeName.INTEGER)
+        );
 
         List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
-
-        RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
                 testAgg,
@@ -407,8 +347,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 grpSets,
                 call,
                 rowType,
-                aggRowType,
-                rowFactory(),
                 scan
         );
 
@@ -451,22 +389,13 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 row(0, 200)
         ));
 
-        AggregateCall call = AggregateCall.create(
+        AggregateCall call = createAggregateCall(
                 SqlStdOperatorTable.SUM,
-                true,
-                false,
-                false,
-                List.of(),
                 ImmutableIntList.of(1),
-                -1,
-                null,
-                RelCollations.EMPTY,
-                tf.createJavaType(int.class),
-                null);
+                tf.createSqlType(SqlTypeName.INTEGER)
+        ).withDistinct(true);
 
         List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
-
-        RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
                 testAgg,
@@ -474,8 +403,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 grpSets,
                 call,
                 rowType,
-                aggRowType,
-                rowFactory(),
                 scan
         );
 
@@ -517,22 +444,13 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                         )
                 );
 
-                AggregateCall call = AggregateCall.create(
+                AggregateCall call = createAggregateCall(
                         SqlStdOperatorTable.SUM,
-                        false,
-                        false,
-                        false,
-                        List.of(),
                         ImmutableIntList.of(1),
-                        -1,
-                        null,
-                        RelCollations.EMPTY,
-                        tf.createJavaType(int.class),
-                        null);
+                        tf.createSqlType(SqlTypeName.INTEGER)
+                );
 
                 List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
-
-                RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
                 SingleNode<Object[]> aggChain = createAggregateNodesChain(
                         testAgg,
@@ -540,8 +458,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                         grpSets,
                         call,
                         rowType,
-                        aggRowType,
-                        rowFactory(),
                         scan
                 );
 
@@ -574,22 +490,13 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 row(0, Integer.MAX_VALUE / 2 + 11)
         ));
 
-        AggregateCall call = AggregateCall.create(
+        AggregateCall call = createAggregateCall(
                 SqlStdOperatorTable.SUM,
-                false,
-                false,
-                false,
-                ImmutableList.of(),
                 ImmutableIntList.of(1),
-                -1,
-                null,
-                RelCollations.EMPTY,
-                tf.createSqlType(SqlTypeName.BIGINT),
-                null);
+                tf.createSqlType(SqlTypeName.BIGINT)
+        );
 
         List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
-
-        RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
                 testAgg,
@@ -597,8 +504,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 grpSets,
                 call,
                 rowType,
-                aggRowType,
-                rowFactory(),
                 scan
         );
 
@@ -623,22 +528,9 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 row(0, Long.MAX_VALUE / 2 + 11)
         ));
 
-        AggregateCall call = AggregateCall.create(
-                SqlStdOperatorTable.SUM,
-                false,
-                false,
-                false,
-                List.of(),
-                ImmutableIntList.of(1),
-                -1,
-                null,
-                RelCollations.EMPTY,
-                tf.createSqlType(SqlTypeName.DECIMAL),
-                null);
+        AggregateCall call = createAggregateCall(SqlStdOperatorTable.SUM, List.of(1), tf.createSqlType(SqlTypeName.DECIMAL));
 
         List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
-
-        RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
                 testAgg,
@@ -646,8 +538,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 grpSets,
                 call,
                 rowType,
-                aggRowType,
-                rowFactory(),
                 scan
         );
 
@@ -672,23 +562,13 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
         RelDataType rowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32, NativeTypes.INT32));
         ScanNode<Object[]> scan = new ScanNode<>(ctx, Collections.emptyList());
 
-        AggregateCall call = AggregateCall.create(
+        AggregateCall call = createAggregateCall(
                 SqlStdOperatorTable.COUNT,
-                false,
-                false,
-                false,
-                ImmutableList.of(),
-                ImmutableIntList.of(),
-                -1,
-                null,
-                RelCollations.EMPTY,
-                tf.createJavaType(int.class),
-                null
+                List.of(),
+                tf.createSqlType(SqlTypeName.INTEGER)
         );
 
         List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of());
-
-        RelDataType aggRowType = TypeUtils.createRowType(tf, TypeUtils.native2relationalTypes(tf, NativeTypes.INT32));
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
                 testAgg,
@@ -696,8 +576,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
                 grpSets,
                 call,
                 rowType,
-                aggRowType,
-                rowFactory(),
                 scan
         );
 
@@ -719,17 +597,24 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
         }
     }
 
-    protected SingleNode<Object[]> createAggregateNodesChain(
-            TestAggregateType testAgg,
-            ExecutionContext<Object[]> ctx,
-            List<ImmutableBitSet> grpSets,
-            AggregateCall aggCall,
-            RelDataType inRowType,
-            RelDataType aggRowType,
-            RowHandler.RowFactory<Object[]> rowFactory,
-            ScanNode<Object[]> scan
+    private static AggregateCall createAggregateCall(
+            SqlAggFunction func,
+            List<Integer> args,
+            RelDataType resultType
     ) {
-        return createAggregateNodesChain(testAgg, ctx, grpSets, aggCall, inRowType, aggRowType, rowFactory, scan, true);
+        return AggregateCall.create(
+                func,
+                false,
+                false,
+                false,
+                List.of(),
+                args,
+                -1,
+                null,
+                RelCollations.EMPTY,
+                resultType,
+                null
+        );
     }
 
     protected SingleNode<Object[]> createAggregateNodesChain(
@@ -738,17 +623,26 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
             List<ImmutableBitSet> grpSets,
             AggregateCall aggCall,
             RelDataType inRowType,
-            RelDataType aggRowType,
-            RowHandler.RowFactory<Object[]> rowFactory,
+            ScanNode<Object[]> scan
+    ) {
+        return createAggregateNodesChain(testAgg, ctx, grpSets, aggCall, inRowType, scan, true);
+    }
+
+    protected SingleNode<Object[]> createAggregateNodesChain(
+            TestAggregateType testAgg,
+            ExecutionContext<Object[]> ctx,
+            List<ImmutableBitSet> grpSets,
+            AggregateCall aggCall,
+            RelDataType inRowType,
             ScanNode<Object[]> scan,
             boolean group
     ) {
         switch (testAgg) {
             case COLOCATED:
-                return createColocatedAggregateNodesChain(ctx, grpSets, aggCall, inRowType, rowFactory, scan, group);
+                return createColocatedAggregateNodesChain(ctx, grpSets, aggCall, inRowType, scan, group);
 
             case MAP_REDUCE:
-                return createMapReduceAggregateNodesChain(ctx, grpSets, aggCall, inRowType, aggRowType, rowFactory, scan, group);
+                return createMapReduceAggregateNodesChain(ctx, grpSets, aggCall, inRowType, scan, group);
 
             default:
                 assert false;
@@ -764,7 +658,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
      * @param grpSets Grouping fields
      * @param aggCall Aggregate representation.
      * @param inRowType Input row type.
-     * @param rowFactory Row factory.
      * @param scan Scan node.
      * @param group Append grouping operation.
      * @return Aggregation nodes chain.
@@ -774,7 +667,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
             List<ImmutableBitSet> grpSets,
             AggregateCall aggCall,
             RelDataType inRowType,
-            RowHandler.RowFactory<Object[]> rowFactory,
             ScanNode<Object[]> scan,
             boolean group
     );
@@ -786,7 +678,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
      * @param grpSets Grouping fields
      * @param call Aggregate representation.
      * @param inRowType Input row type.
-     * @param rowFactory Row factory.
      * @param scan Scan node.
      * @param group Append grouping operation.
      * @return Aggregation nodes chain.
@@ -796,8 +687,6 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
             List<ImmutableBitSet> grpSets,
             AggregateCall call,
             RelDataType inRowType,
-            RelDataType aggRowType,
-            RowHandler.RowFactory<Object[]> rowFactory,
             ScanNode<Object[]> scan,
             boolean group
     );
@@ -806,9 +695,30 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest<Object[]> 
             ExecutionContext<Object[]> ctx,
             AggregateCall call,
             AggregateType type,
-            RelDataType rowType
+            RelDataType inRowType
     ) {
-        return ctx.expressionFactory().accumulatorsFactory(type, asList(call), rowType);
+        return ctx.expressionFactory().accumulatorsFactory(type, asList(call), inRowType);
+    }
+
+    protected static RowSchema createOutputSchema(
+            ExecutionContext<Object[]> ctx,
+            AggregateCall call,
+            RelDataType inRowType,
+            ImmutableBitSet grpSet
+    ) {
+        RelDataTypeFactory.Builder outputType = new RelDataTypeFactory.Builder(ctx.getTypeFactory());
+
+        // Add keys
+        for (int i = 0; i < grpSet.length(); i++) {
+            if (grpSet.get(i)) {
+                outputType.add("F" + i, inRowType.getFieldList().get(i).getType());
+            }
+        }
+
+        // Add aggregation result
+        outputType.add("R0", call.getType());
+
+        return TypeUtils.rowSchemaFromRelTypes(RelOptUtil.getFieldTypeList(outputType.build()));
     }
 
     enum TestAggregateType {
